kubernetes/selenium/selenium-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: creds-tools
  labels:
    app: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
      - name: selenium-hub
        image: selenium/hub:4.2.2
        ports:
          - containerPort: 4444
          - containerPort: 4443
          - containerPort: 4442
        resources:
          limits:
            memory: "1000Mi"
            cpu: ".5"
        livenessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: creds-tools
  labels:
    app: selenium-hub
    service: selenium-hub
spec:
  type: ClusterIP
  ports:
  - port: 4444
    targetPort: 4444
    name: selenium-hub-web
  - port: 4443
    targetPort: 4443
    name: selenium-hub-event-subscribe
  - port: 4442
    targetPort: 4442
    name: selenium-hub-event-publish
  selector:
    app: selenium-hub
