kubernetes/selenium/selenium-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: creds-tools
  name: selenium-hub-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: creds-tools
  name: selenium-hub-vs-gateway
spec:
  hosts:
  - "*"
  gateways:
  - selenium-hub-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: selenium-hub
        port:
          number: 4444
